--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,14 +40,14 @@
         android:layout_gravity="bottom"
         app:backgroundTint="@color/colorPrimaryDark" />
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fabAdd"-->
-<!--        app:hideOnScroll="true"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:backgroundTint="@color/colorPrimary"-->
-<!--        android:src="@drawable/ic_baseline_add_24"-->
-<!--        app:layout_anchor="@id/bar"/>-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        app:hideOnScroll="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_anchor="@id/bar"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
